--- a/docker-tomcat-jar-example/Dockerfile
+++ b/docker-tomcat-jar-example/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:8-jdk-alpine
 
+MAINTAINER egormaksimchuk@gmail.com
+
 COPY ./target/docker-tomcat-jar-example-1.0-SNAPSHOT.jar /
 
 EXPOSE 8080
