--- a/docker-compose-example/Dockerfile
+++ b/docker-compose-example/Dockerfile
@@ -1,12 +1,9 @@
-FROM tomcat:8.0.20-jre8
+FROM openjdk:8-jdk-alpine
 
 MAINTAINER egormaksimchuk@gmail.com
 
-ENV CATALINA_HOME /usr/local/tomcat
-ENV PATH $CATALINA_HOME/bin:$PATH
-
-COPY ./target/docker-compose-example-1.0-SNAPSHOT.war $CATALINA_HOME/webapps/
+COPY ./target/docker-tomcat-jar-example-1.0-SNAPSHOT.jar /
 
 EXPOSE 8080
 
-CMD ["catalina.sh", "run"]
+ENTRYPOINT ["java","-jar","docker-tomcat-jar-example-1.0-SNAPSHOT.jar"]
