--- a/docker-compose-example/docker-compose.yml
+++ b/docker-compose-example/docker-compose.yml
@@ -1,14 +1,21 @@
-version: '2'
+version: '3'
 
 services:
-  web:
-    build:
-      context: .
+  docker-mysql:
+    image: mysql:latest
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=restdemo
+      - MYSQL_PASSWORD=root
+  spring-boot-jpa-docker-webapp:
+    image: gradle-springboot
+    depends_on:
+      - docker-mysql
     ports:
-      - "8080:8080"
-  db:
-    image: "mysql:latest"
-    ports:
-      - "3306:3306"
-    volumes:
-      -   "/src/main/resources/db"
+      - 8080:8080
+    environment:
+      - DATABASE_HOST=docker-mysql
+      - DATABASE_USER=root
+      - DATABASE_PASSWORD=root
+      - DATABASE_NAME=restdemo
+      - DATABASE_PORT=3306
