--- a/docker-compose-example/src/main/resources/application.properties
+++ b/docker-compose-example/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #spring.profiles.active=
-server.port=8081
+server.port=8080
 server.context-path=/api/
 #spring.datasource.initialize=true
 #spring.datasource.schema:classpath*:database/initDB.sql
 #spring.datasource.data:classpath*:database/populateDB.sql
-spring.datasource.url=jdbc:mysql://localhost:3306/restdemo
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/restdemo?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
