--- a/docker-compose-example/docker-compose.yml
+++ b/docker-compose-example/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3'
 
 services:
-  docker-mysql:
+  db:
     image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=restdemo
       - MYSQL_PASSWORD=root
-  spring-boot-jpa-docker-webapp:
+  web:
     build: .
     depends_on:
-      - docker-mysql
+      - db
     ports:
       - 8080:8080
     environment:
-      - DATABASE_HOST=docker-mysql
+      - DATABASE_HOST=db
       - DATABASE_USER=root
       - DATABASE_PASSWORD=root
       - DATABASE_NAME=restdemo
